<resources>
    <string name="app_name">SafeStree</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">Location</string>
    <string name="contacts">Contacts</string>
    <string name="sos">SOS</string>
    <string name="setting">Setting</string>
    <string name="information">Information</string>
    <string name="done">Done</string>
    <string name="emergency_contacts">Emergency Contacts</string>

    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="geoInfo">When the user sets a safe location by clicking the geo-location button and specifies the minimum safe distance in kilometers, it is marked as a secure zone. If the user stays within this safe zone, the application refrains from sending any SMS alerts. However, as soon as the user moves beyond the specified safe location, the SOS button can be triggered. This action will automatically send the current location and an alert message to the predefined emergency contact, ensuring prompt assistance in case of any distress.</string>

</resources>