<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.login">

    <ImageView
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:src="@mipmap/ic_app_icon_1_round"
        android:layout_above="@id/tv_title"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_12sdp"/>
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/_20sdp"
        android:fontFamily="serif"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_above="@id/tv_subtitle"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="serif"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_above="@id/et_email"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:hint="@string/e_mail"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:padding="@dimen/_10ssp"
        android:inputType="textEmailAddress"
        android:fontFamily="serif"
        android:layout_above="@id/et_password"
        android:background="@drawable/et_custom"
        android:textSize="@dimen/_12ssp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@drawable/et_custom"
        android:fontFamily="serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/_10ssp"
        android:textSize="@dimen/_12ssp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:background="@drawable/btn_custom"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15ssp"
        android:padding="@dimen/_5sdp"
        android:fontFamily="serif"
        android:textSize="@dimen/_12ssp"
        android:textColor="@android:color/white"
        android:text="@string/login"/>

    <ProgressBar
        android:id="@+id/loginProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_below="@id/btn_login"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:layout_above="@id/swipeImage"
        android:foregroundGravity="center"/>

    <ImageView
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:id="@+id/swipeImage"
        android:src="@drawable/ic_arrow_right_24"
        android:layout_above="@id/swipeRight"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/swipeRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swipe_left_for_register"
        android:textSize="@dimen/_15ssp"
        android:fontFamily="serif"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_20sdp"/>

</RelativeLayout>

    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<LinearLayout-->
    <!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent"-->
    <!--    android:orientation="vertical"-->
    <!--    android:padding="16dp">-->

    <!--    <ImageView-->
    <!--        android:layout_width="100dp"-->
    <!--        android:layout_height="100dp"-->
    <!--        android:src="@drawable/ic_launcher_foreground"-->
    <!--        android:layout_gravity="center"/>-->

    <!--    <EditText-->
    <!--        android:id="@+id/loginUsername"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:hint="Username"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:inputType="text"-->
    <!--        android:textSize="20sp"/>-->

    <!--    <EditText-->
    <!--        android:id="@+id/loginPassword"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:hint="Password"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:inputType="textPassword"-->
    <!--        android:textSize="20sp"/>-->

    <!--    <ProgressBar-->
    <!--        android:id="@+id/loginProgress"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:visibility="gone"-->
    <!--        android:layout_gravity="center"/>-->
    <!--    <Button-->
    <!--        android:id="@+id/loginBtn"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Login"-->
    <!--        android:layout_marginTop="16dp"/>-->

    <!--    <TextView-->
    <!--        android:id="@+id/newUser"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Don't have an account? Sign up here."-->
    <!--        android:gravity="center"-->
    <!--        android:layout_marginTop="16dp"/>-->

    <!--</LinearLayout>-->
